--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
       color: #7B05F5;
     }
     table tr:first-child:hover {
-      background-color: #f5f504;
-      color: #7B05F5;
+      background-color: #8F3704;
+      color: #048f8f;
     }
     table tr:first-child:hover table.inner-table tr:first-child {
-      background-color: #f5f504;
-      color: #7B05F5;
+      background-color: #8F3704;
+      color: #048f8f;
     }
     table tr:nth-child(2):hover {
-      background-color: #048f8f;
-      color: #8F3704;
+      background-color: #7B05F5;
+      color: #f5f504;
     }
     table.inner-table {
       width: 100%;
